Now that we have forecable global options it makes sense to ignore the user trustlist.txt iff --no-allow-mark-trusted is forceable set in the global conf.
And while at it we should also add a include-custom trustlist statement in the global conf.
Now that we have forecable global options it makes sense to ignore the user trustlist.txt iff --no-allow-mark-trusted is forceable set in the global conf.
And while at it we should also add a include-custom trustlist statement in the global conf.